--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Number Guesseer</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Number Guesser</h1>
+        <div id="game">
+            <p>Guess the number between <span class="min-num">1</span> and <span class="max-num">10</span></p>
+            <input type="number" id="guess-input" placeholder="Enter your guess...">
+            <input type="submit" value="submit" id="guess-submit"></input>
+            <p id="message"></p>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
